--- a/.github/workflows/buildAndRunTests.yml
+++ b/.github/workflows/buildAndRunTests.yml
@@ -1,10 +1,10 @@
-name: .NET
+name: build and run tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [ develop, master ]
   pull_request:
-    branches: [ master ]
+    branches: [ develop, master ]
 
 jobs:
   build:
